src/blocks/container/editor.scss
/**
 * #.# Editor Styles
 *
 * CSS for just Backend enqueued after style.scss
 * which makes it higher in priority.
 */

body.gutenberg-editor-page [data-type="generateblocks/container"] .editor-block-list__block,
[data-type="generateblocks/container"] .wp-block-heading h1,
[data-type="generateblocks/container"] .wp-block-heading h1.editor-rich-text__tinymce,
[data-type="generateblocks/container"] .wp-block-heading h2,
[data-type="generateblocks/container"] .wp-block-heading h2.editor-rich-text__tinymce,
[data-type="generateblocks/container"] .wp-block-heading h3,
[data-type="generateblocks/container"] .wp-block-heading h3.editor-rich-text__tinymce,
[data-type="generateblocks/container"] .wp-block-heading h4,
[data-type="generateblocks/container"] .wp-block-heading h4.editor-rich-text__tinymce,
[data-type="generateblocks/container"] .wp-block-heading h5,
[data-type="generateblocks/container"] .wp-block-heading h5.editor-rich-text__tinymce,
[data-type="generateblocks/container"] .wp-block-heading h6,
[data-type="generateblocks/container"] .wp-block-heading h6.editor-rich-text__tinymce {
	color: inherit;
}

.edit-bg-buttons {
	margin-top: 10px;
	margin-bottom: 10px;
}

.edit-bg-buttons button.components-button {
    margin-bottom: 10px;
}

.additional-class-notice .components-notice {
	margin: 0 0 10px;
}

.widthButtons button {
    font-size: 12px;
    flex: 1;
	border: 1px solid;
}

.widthButtons {
    margin-bottom: 10px;
    display: flex;
}

.gblocks-column-width-control input[type="number"] {
	width: 65px;
}

body .gb-container .wp-block {
    max-width: none;
}

[data-type="generateblocks/container"] > .block-editor-block-list__block-edit > [data-block] {
    margin: 0;
}

/* Not needed in GB 7 */
.edit-post-visual-editor .block-editor-block-list__block[data-type="generateblocks/container"] > .block-editor-block-list__block-edit {
    margin: 0;
}

.block-editor-block-list__layout .block-editor-block-list__block[data-type="generateblocks/container"] {
    padding: 0;
	box-sizing: border-box;
}

.gb-container .gb-inside-container {
	box-sizing: content-box;
}

.gb-container *:not(.gb-inside-container) {
	box-sizing: border-box;
}

/* Bad idea?? */
[data-type="generateblocks/container"] .block-editor-block-list__insertion-point,
[data-type="generateblocks/grid"] .block-editor-block-list__insertion-point {
    display: none;
}

.editor-styles-wrapper .gb-container [data-block],
.editor-styles-wrapper .gb-grid-wrapper [data-block] {
    margin-top: 0;
    margin-bottom: 0;
}

